# fishbot

./: .env  .gitignore  README.md  docker-compose.yml  justfile  pyproject.toml
src/: config-template.toml  config.py  entrypoint.sh  init.py  main.py  requirements.txt  timer.py
src/core/: db.py  http.py  models.py  redis.py  scheduler.py  utils.py
src/discover/: __init__.py  base.py  bilibili.py  weibo.py
src/handler/: __init__.py  base.py  bilibili.py  normal.py  weibo.py
src/sender/: __init__.py  base.py  cq.py
