[tool.poetry]
name = "fishbot"
version = "0.1.0"
description = "将关注的事情推送到眼前"
authors = ["lc4t"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^23.3.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"
aioredis = "<2.0"
apscheduler = "^3.10.1"
tortoise-orm = "^0.19.3"
aiomysql = "^0.2.0"
python-dateutil = "^2.8.2"
sentry-sdk = "^1.26.0"
aiocontextvars = "^0.2.2"
loguru = "^0.7.0"
redis = "^4.5.5"
sqlalchemy = "^2.0.16"
ipython = "^8.14.0"
nonebot = "^1.9.1"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
skip = ["setup.py", ".venv"]
known_first_party = ["src"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
target-version = "py11"
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Pyupgrade
  "UP",
  # Flake8-pyi
  "PYI",
  # Flake8-use-pathlib
  "PTH",
  # Yesqa
  "RUF100",
]
ignore = [
  "E501", # line too long, duplicate with black
  "F401", # imported but unused, duplicate with pyright
  "F841", # local variable is assigned to but never used, duplicate with pyright
]

[build-system]
requires = ["poetry_core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
